--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+
+  font-family: "Open Sans", sans-serif;
+}
+
+/* h1, h2, h3, h4, h5, span, p, strong, label {
+  font: inherit !important;
+} */
