--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -9,7 +9,15 @@
 
   font-family: "Open Sans", sans-serif;
 }
+p, a, span, button {
+  font-size: 1rem;
+}
 
-/* h1, h2, h3, h4, h5, span, p, strong, label {
-  font: inherit !important;
-} */
+a {
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+  border: none;
+}
